# liberty-echo

./: .env.example  .replit  Copy_of_LTX_2_3.ipynb  Dockerfile  design_guidelines.md  pyproject.toml  replit.md  run_tts_engine.py  start.sh  start_all.sh
api/: __init__.py  main.py  requirements.txt
attached_assets/: AI_TOOL_PROJECT_-_AI_VOICE_CLONE_GENERATOR_1767784877320.docx  Blueprint_for_a_Professional_AI_Voice_Clone_Generator_-_LIBER_1767784877320.docx  Pasted--AI-voice-clone-generator-overview-Below-is-a-compact-p_1767786315571.txt  Pasted--Full-Figma-Prototype-Plan-and-Timeline-Summary-I-ll-bu_1767786990141.txt  Pasted--Overview-A-clean-trust-first-web-app-that-guides-users_1767786877244.txt  Pasted--type-Settings-audio-input-encoding-linear16-sample-176_1767786807815.txt  Pasted-A-ready-to-develop-Figma-component-spec-and-prioritized_1767786897118.txt  Pasted-Architecture-summary-Frontend-Next-js-React-WebSocket-f_1767785272595.txt  Pasted-Deliverables-what-I-will-produce-in-the-prototype-Figma_1767786942507.txt  Pasted-I-ll-continue-the-build-out-and-give-you-the-next-layer_1767787208175.txt  Pasted-Let-s-put-this-thing-on-the-internet-I-ll-give-you-a-ti_1767787331716.txt  Pasted-Nice-let-s-wire-this-thing-up-I-ll-give-you-lean-workin_1767786337154.txt  Pasted-Perfect-let-s-deploy-your-AI-voice-clone-engine-on-Azur_1767787403209.txt  Pasted-You-re-basically-asking-How-do-I-build-my-own-ElevenLab_1767785343368.txt
client/: index.html
config/: settings.py
engine/: __init__.py
server/: auth.ts  billing.ts  index.ts  routes.ts  storage.ts
(+35 files in other folders)
