[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=25.1.0",
    "fastapi>=0.128.0",
    "numpy>=2.4.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "python-multipart>=0.0.21",
    "soundfile>=0.13.1",
    "uvicorn>=0.40.0",
    "websockets>=15.0.1",
]
